refactor: simplify fetch error messages